welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:14: error: return outside method definition
    return true
    ^